The run editor asks itself the question it already answers
RunEditor has one method for "what did the run record for this case" -
runItem(id), which answers with an Optional. Three places inside the class went
around it to the map underneath and checked the answer for null, so the same
question had one shape for callers and another for the class that owns it. They
ask runItem now.

The run itself was the same story one level up: a nullable field with an Optional
getter in front of it, and three readers reaching past the getter to the field.
The field is the Optional now, so the reload empties it and every reader - inside
the class and out - sees the same thing.

Four editors said they might have nothing to focus. Every one of them returns the
list it is built around, and that list has been final and made in the constructor
since the sweep, so there is no moment when an open editor has nothing to focus.
The platform's contract allows null there; ours does not, and now says so.

Also: the id-to-case store stopped asking whether a test set it was given has any
cases at all - an unknown set answers with an empty list like an empty one does -
and the tree's two clipboard readers now ask one method what is on the clipboard
rather than each checking the platform's null themselves.

@Nullable 64 to 59, null comparisons 204 to 189.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>